<resources>
	<string name="app_name">tawseelah</string>
	
	<string-array name="choose_sign_up">
		<item>اختار من  القائمة</item>
		<item>انشاء حساب (سائق)</item>
		<item>انشاء حساب (مطعم)</item>
	</string-array>
	
	<string-array name="orders_choose">
		<item>اختار من  القائمة</item>
		<item>الطلبات قيد الانتظار</item>
		<item>الطلبات التي تم حذفها</item>
		<item>الطلبات المنتهيه</item>
		<item>الطلبات المأخوذه</item>
		<item>جميع الطلبات</item>
	</string-array>
	
	<string name="title_activity_adminstrater_work_on">adminstrater_work_on</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	
	<string name="menu_home">All orders</string>
	<string name="menu_gallery">All Drivers</string>
	<string name="all_Restaurants">Restaurants</string>
	<string name="menu_tools">Tools</string>
	<string name="menu_share">restaurant location</string>
	<string name="change_password">تغير كلمة السر</string>
	<string name="car_color">لون السيارة</string>
	<string name="driver_info">معلومات السائق</string>
	<string name="title_activity_maps_for_admin">Map</string>
	<string name="enter_email">ادخل البريد الإلكتروني</string>
	<string name="change_password_enter">غير كلمة السر</string>

</resources>
