<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
	
	<group android:checkableBehavior="single">
		<item
				android:id="@+id/all_drivers"
				android:icon="@drawable/ic_menu_gallery"
				android:title="@string/menu_gallery"/>
		<item
				android:id="@+id/resturant"
				android:title="@string/all_Restaurants"
				android:icon="@drawable/ic_restaurant_black_24dp"
		></item>
	
	</group>
	
	<item android:title="Communicate">
		<menu>
			<item
					android:id="@+id/change_password"
					android:icon="@drawable/ic_settings_black_24dp"
					android:title="@string/change_password"/>
			<item
					android:id="@+id/log_out"
					android:title="LOG OUT"
					></item>
		</menu>
	</item>

</menu>
